# AdventOfCode2025

./: .gitignore  CMakeLists.txt  day1.cpp  readme.md
Day1/: SafeCodeFinder.cpp
Day2/: GiftShopPart1.cpp  GiftShopPart2.cpp
Day3/: LobbyPart1.cpp  LobbyPart2.cpp
Day4/: PrintingDepartmentPart1.cpp  PrintingDepartmentPart2.cpp
Day5/: CafeteriaPart1.cpp  CafeteriaPart2.cpp
